--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "assets"]
 	path = assets
-	url = https://hub.fastgit.org/cluster327/frontend
+	url = git@github.com:cluster327/frontend.git
